<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Countr</string>
	<string name="app_description">easy counting of whatever you want</string>
	<string name="btn_plus_label">+</string>
	<string name="btn_minus_label">-</string>
	<string name="etxt_count_init_value">0</string>
	<string name="btn_reset">Reset</string>


	<string name="action_colour_scheme">Select colour scheme</string>
	<string name="action_colour_scheme_blue">Blue</string>
	<string name="action_colour_scheme_red">Red</string>
	<string name="action_colour_scheme_green">Green</string>
	<string name="action_colour_scheme_orange">Orange</string>
	<string name="action_colour_scheme_purple">Purple</string>

	<string name="action_reset_counter">Reset counter</string>
	<string name="action_visibility_both">Show both buttons</string>
	<string name="action_visibility_only_plus">Show plus-button only</string>
	<string name="action_visibility_only_minus">Show minus-button only</string>

	<string name="error_invalid_long">Value of counter is invalid</string>

	<!-- translations are not necessary -->
	<string name="pref_counter">pref-counter</string>
	<string name="pref_colour_scheme">pref-colour</string>
	<string name="pref_button_visibility">pref-button-visibility</string>
</resources>
