<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:alpha="1">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
	    <LinearLayout
			    android:orientation="vertical"
			    android:layout_width="0dp"
			    android:layout_height="0dp" android:focusable="true" android:focusableInTouchMode="true">
	    </LinearLayout>
	    <EditText
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:id="@+id/etxt_count" android:background="#c5eaf8" android:text="@string/etxt_count_init_value"
	            android:phoneNumber="false" android:autoText="false"
	            android:textSize="@dimen/txt_counter_value" android:singleLine="true" android:enabled="true"
	            android:gravity="fill_vertical" android:clickable="true"
	            android:padding="@dimen/activity_horizontal_margin" android:numeric="integer"
	            android:digits="- 0123456789" android:inputType="number"/>
	    <LinearLayout
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" android:layout_weight="9">
		    <Button
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/btn_plus_label"
	                android:id="@+id/btn_plus"
	                android:layout_below="@+id/item" android:layout_alignLeft="@+id/item"
	                android:layout_alignParentRight="true" android:background="#0099CC"
	                android:textSize="@dimen/btn_font_size"
	                android:layout_weight="1" android:visibility="visible"/>
		    <Button
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/btn_minus_label"
	                android:id="@+id/btn_minus"
	                android:layout_below="@+id/btn_plus" android:layout_alignLeft="@+id/btn_plus"
	                android:layout_alignRight="@+id/btn_plus" android:background="#33B5E5"
	                android:textSize="@dimen/btn_font_size" android:layout_weight="1"/>
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
